--- a/Dingel_JohnTitle.html
+++ b/Dingel_JohnTitle.html
@@ -6,7 +6,7 @@
             </title>  
   <link rel="stylesheet" type="text/CSS" href="mystyles.css">
 </head>
-<h1 style="font-size:60;">
+<h1 style="font-size:70;">
     <thref="mystitle> Album #1
         <br>
         Dark Side of the Moon
@@ -16,8 +16,20 @@
         <br>
         <br>
         <br>
-            <h1 class="background">Background</h1>
-            <p>The album was released on March 1st, 1973. 
-        
+            <h1 class="catch">Background</h1>
+       <h1 style="font-size:30px;">     <p>The album was released on March 1st, 1973. According to Firebird magazine, the album is a concept album that explores themes of conflict, greed, time, mental illness, and mortality, largely inspired by the band's lifestyle and the mental deterioration of former member Syd Barrett.</p>
+        <h1 class="songs">Top songs</h1>
+        <h1 style="font-size:45px;">
+        <ol>
+                <li>Money</li>
+                <li>Time</li>
+                <li>Brain Damage</li>
+                <li>Us and Them</li>
+                <li>Breathe(In the Air)
+                </ol>
+ <a href="The Wall.html"class="Side">Next Page</a>
+ <hr>
+ <br>
+  <a href="PinkFloyd.html">Previous Page</a>
         </body>
         </html>
