--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <thref="mystitle> All about Pink Floyd</title>
     </head>
 <body>
+    <nav>
+        <a href="index.html">
+            <a href="Pink Floyd dark side of the moon.html">
+                <a href="Thewall.html">
+                    <a href="Wish you were here.html">
+    </nav>
         <br>
         <br>
         <br>
@@ -32,4 +38,5 @@
               <a href="Pink Floyd dark side of the moon .html"class="Pink">Next Page</a>
 </body>
 </html>
+
 
