--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <nav>
         <a href="index.html">
-            <a href="Pink Floyd dark side of the moon.html">
-                <a href="Thewall.html">
-                    <a href="Wish you were here.html">
+            <a href="Pink Floyd dark side of the moon .html">
+                <a href="The Wall.html">
+                    <a href="Wish You were here.html">
     </nav>
         <br>
         <br>
@@ -38,5 +38,4 @@
               <a href="Pink Floyd dark side of the moon .html"class="Pink">Next Page</a>
 </body>
 </html>
-
 
