Update Pink Floyd dark side of the moon .html

--- a/Pink Floyd dark side of the moon .html
+++ b/Pink Floyd dark side of the moon .html
@@ -30,6 +30,6 @@
  <a href="The Wall.html"class="Side">Next Page</a>
  <hr>
  <br>
-  <a href="PinkFloyd.html">Previous Page</a>
+  <a href="Index.html">Previous Page</a>
         </body>
         </html>
