Update Pink Floyd dark side of the moon .html

--- a/Pink Floyd dark side of the moon .html
+++ b/Pink Floyd dark side of the moon .html
@@ -27,9 +27,10 @@
                 <li>Us and Them</li>
                 <li>Breathe(In the Air)
                 </ol>
- <a href="The Wall.html"class="Side">Next Page</a>
+ <a href="The Wall.html"class"=Side">Next Page</a>
  <hr>
  <br>
   <a href="Index.html">Previous Page</a>
         </body>
         </html>
+
