Update Pink Floyd dark side of the moon .html

--- a/Pink Floyd dark side of the moon .html
+++ b/Pink Floyd dark side of the moon .html
@@ -12,6 +12,12 @@
         Dark Side of the Moon
     </title>
     <body>
+         <nav>
+        <a href="index.html">
+            <a href="Pink Floyd dark side of the moon .html">
+                <a href="The Wall.html">
+                    <a href="Wish You were here.html">
+    </nav>
         <br>
         <br>
         <br>
@@ -33,5 +39,6 @@
   <a href="Index.html">Previous Page</a>
         </body>
         </html>
+
 
 
