Update Wish you were here.html

--- a/Wish you were here.html
+++ b/Wish you were here.html
@@ -12,6 +12,12 @@
         Wish You were Here
     </title>
     <body>
+         <nav>
+        <a href="index.html">
+            <a href="Pink Floyd dark side of the moon .html">
+                <a href="The Wall.html">
+                    <a href="Wish You were here.html">
+    </nav>
         <br>
         <br>
             <h1 class="">Background</h1>
