--- a/dark-side.html
+++ b/dark-side.html
@@ -23,7 +23,7 @@
 
   <main class="card">
     <h2 class="section-title catch">Background</h2>
-    <p>
+    <p class="quintin">
       Released March 1, 1973, this concept album explores themes of conflict, greed, time,
       mental illness, and mortality—partly inspired by the band’s life and Syd Barrett’s decline.
     </p>
@@ -48,3 +48,4 @@
   </footer>
 </body>
 </html>
+
